; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/hci/controller_vhci_ble_adv/main/extr_app_bt.c_make_cmd_ble_set_adv_data.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/hci/controller_vhci_ble_adv/main/extr_app_bt.c_make_cmd_ble_set_adv_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@H4_TYPE_COMMAND = common dso_local global i64 0, align 8
@HCI_BLE_WRITE_ADV_DATA = common dso_local global i32 0, align 4
@HCIC_PARAM_SIZE_BLE_WRITE_ADV_DATA = common dso_local global i64 0, align 8
@HCI_H4_CMD_PREAMBLE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64*, i64, i64*)* @make_cmd_ble_set_adv_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @make_cmd_ble_set_adv_data(i64* %0, i64 %1, i64* %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  store i64* %0, i64** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64* %2, i64** %6, align 8
  %7 = load i64*, i64** %4, align 8
  %8 = load i64, i64* @H4_TYPE_COMMAND, align 8
  %9 = call i32 @UINT8_TO_STREAM(i64* %7, i64 %8)
  %10 = load i64*, i64** %4, align 8
  %11 = load i32, i32* @HCI_BLE_WRITE_ADV_DATA, align 4
  %12 = call i32 @UINT16_TO_STREAM(i64* %10, i32 %11)
  %13 = load i64*, i64** %4, align 8
  %14 = load i64, i64* @HCIC_PARAM_SIZE_BLE_WRITE_ADV_DATA, align 8
  %15 = add nsw i64 %14, 1
  %16 = call i32 @UINT8_TO_STREAM(i64* %13, i64 %15)
  %17 = load i64*, i64** %4, align 8
  %18 = load i64, i64* @HCIC_PARAM_SIZE_BLE_WRITE_ADV_DATA, align 8
  %19 = call i32 @memset(i64* %17, i32 0, i64 %18)
  %20 = load i64*, i64** %6, align 8
  %21 = icmp ne i64* %20, null
  br i1 %21, label %22, label %39

22:                                               ; preds = %3
  %23 = load i64, i64* %5, align 8
  %24 = icmp sgt i64 %23, 0
  br i1 %24, label %25, label %39

25:                                               ; preds = %22
  %26 = load i64, i64* %5, align 8
  %27 = load i64, i64* @HCIC_PARAM_SIZE_BLE_WRITE_ADV_DATA, align 8
  %28 = icmp sgt i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = load i64, i64* @HCIC_PARAM_SIZE_BLE_WRITE_ADV_DATA, align 8
  store i64 %30, i64* %5, align 8
  br label %31

31:                                               ; preds = %29, %25
  %32 = load i64*, i64** %4, align 8
  %33 = load i64, i64* %5, align 8
  %34 = call i32 @UINT8_TO_STREAM(i64* %32, i64 %33)
  %35 = load i64*, i64** %4, align 8
  %36 = load i64*, i64** %6, align 8
  %37 = load i64, i64* %5, align 8
  %38 = call i32 @ARRAY_TO_STREAM(i64* %35, i64* %36, i64 %37)
  br label %39

39:                                               ; preds = %31, %22, %3
  %40 = load i64, i64* @HCI_H4_CMD_PREAMBLE_SIZE, align 8
  %41 = load i64, i64* @HCIC_PARAM_SIZE_BLE_WRITE_ADV_DATA, align 8
  %42 = add nsw i64 %40, %41
  %43 = add nsw i64 %42, 1
  ret i64 %43
}

declare dso_local i32 @UINT8_TO_STREAM(i64*, i64) #1

declare dso_local i32 @UINT16_TO_STREAM(i64*, i32) #1

declare dso_local i32 @memset(i64*, i32, i64) #1

declare dso_local i32 @ARRAY_TO_STREAM(i64*, i64*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
